    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/nameField"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="Name"
        android:onClick="inputName"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textAllCaps="true"
        android:textSize="16sp"/>


    <CheckBox
        android:id="@+id/toppingCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/whippedCream"
        android:paddingLeft="24dp"
        android:onClick="ifCheckedCheckBox"/>

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="string/chocolate"
        android:textSize="16sp"
        android:onClick="ifCheckedCheckBox"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:onClick="decrement"
            android:text="@string/button2"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/value"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:onClick="increment"
            android:text="@string/button1"
            android:textSize="16sp" />

    </LinearLayout>

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:text="@string/text1"-->
        <!--android:textSize="16sp" />-->

    <!--<TextView-->
        <!--android:id="@+id/order_summary_text_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/value1"-->
        <!--android:textColor="#000000"-->
        <!--android:textSize="16sp" />-->

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/button"
        android:textSize="16sp" />





</LinearLayout>
</ScrollView>